2005-10-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/aux.c: renamed to ..
	* inputmethod/iiimf/im_iiimf_aux.c: this.
	(see http://www.cygwin.com/faq/faq_toc.html#TOC58)

2005-09-29  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: do not reset parser state in 
	restore_cursor().

	* xwindow/x_im.h: #include <stdio.h> for sprintf.

2005-09-26  MINAMI Hirokazu  <minami@mistfall.net>

	* doc/term/mlterm.t[ic]: use xterm like sequences for 
	rmcup/smcup since 
	- length of termcap/terminfo entries can be a bit shorter.
	- we may implement titeInhibit in the furter.

2005-09-25  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: now passes test #2 of the vttest
	on ja_JP.EUC-JP.

2005-09-23  MINAMI Hirokazu <minami@mistfall.net>

	* mkf/lib/mkf_gb18030_2000_intern.c, mkf/lib/mkf_xct_parser.c:
	added casts to clarify signedness.

2005-09-23  Mike FABIAN  <mfabian@suse.de>

	* kiklib/src/kik_utmp_utmper.c, tool/mlclient/main.c:
	fix implicit function declarations (patch by
	MINAMI Hirokazu <minami@mistfall.net>).

2005-09-19 MINAMI Hirokazu <minami@mistfall.net>
	
	* kiklib/src/kik_conf_io.c: added a debugging feature.
	The user configuration directory can be overridden using CONF_DIR.

2005-09-18 MINAMI Hirokazu <minami@mistfall.net>

	* contrib/tool/mlcc/main.c: mlcc [parameter name] now
	generates a corresponding query sequence so that
	you can get a list of ptys by "mlcc pty_list".

2005-09-18 MINAMI Hirokazu <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: try to restore a perser's GL when
	restore_cursor() was called.
	- only works on non-iso2022 locales at present.
	(I'm not yet sure how the parser's internal states should be
	 save/restored on iso2022 locales.)
	- test#2 of the vttest shold be passed on UTF-8 locales.
	(Thanks to Thomas Dickey for suggestions)

	* mlterm/ml_vt100_parser.c: declare digits[] as char[]
	since atoi() expects maybe-(un)signed-char and not u_char.