@@ -1,3 +1,11 @@
+2005-10-13  MINAMI Hirokazu  <minami@mistfall.net>
+
+	* mlterm/ml_char.c:
+	  - Since LP64 glibc's malloc() is known to always return
+	  16-byte aligned chunk, sanity check can be omitted
+
+	  - changed nl_ch and sp_ch from file-local to fuction-local.
+
 2005-10-05  Seiichi SATO <ssato@sh.rim.or.jp>
 
 	* inputmethod/iiimf/aux.c: renamed to ..
@@ -16,7 +24,7 @@
 	* doc/term/mlterm.t[ic]: use xterm like sequences for 
 	rmcup/smcup since 
 	- length of termcap/terminfo entries can be a bit shorter.
-	- we may implement titeInhibit in the furter.
+	- we may implement titeInhibit someday.
 
 2005-09-25  MINAMI Hirokazu  <minami@mistfall.net>
 
